objects/Validation_Execution_Event__e.object
<CustomObject>
    <fields>
        <fullName>Learning_Assignment_Id__c</fullName>
        <label>Learning Assignment Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Id__c</fullName>
        <label>Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isFinished__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isFinished</label>
        <type>Checkbox</type>
    </fields>
    <label>Validation Execution Event</label>
    <pluralLabel>Validation Execution Events</pluralLabel>
</CustomObject>